Fix `ul` and `ol` spacings

--- a/src/once-ui/styles/global.scss
+++ b/src/once-ui/styles/global.scss
@@ -5,7 +5,12 @@
 
 ul {
     margin: 0;
-    padding: 0 0 0 var(--static-space-12);
+    padding: 0 0 0 var(--static-space-20);
+}
+
+ol {
+    margin: 0;
+    padding: 0 0 0 var(--static-space-24);
 }
 
 li {
